# n-methods

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  binary_exponentiation.cpp  build.sh  extended_gcd.cpp  gcd.cpp
.github/: pull_request_template.md
.github/workflows/: cmake-single-platform.yml  cmake.yml
doc/: 21st-century-romance  21st-century-romance.md  comic-script.md  confused-padawan.md  entropy.md  footnotes-and-other-references.md  footnotes.md  fun-and-learning.md  fun.md  implementations-pending.md  quantum-superposition-genie.md  sport-programming.md  testing-apis.md  work-for-introverted-individuals.md
include/: binary_exponentiation.hpp  combinatorics.hpp  crypto.hpp  exponentiation.hpp  extended_gcd.hpp  gcd.hpp  graph.hpp  hash.hpp  interpolation.hpp  modulo.hpp  modulo_operations.hpp  newton.hpp  primes.hpp  random.hpp  search.hpp  segment_tree.hpp  sort.hpp  table.hpp  trees.hpp  union_find.hpp  utility.hpp
play/: .gitignore  CMakeLists.txt  Cargo.toml  play.bat  play.sh  rust.bat  rust.sh  template.cpp  template.rs
src/: CMakeLists.txt  als.rs  binary_exponentiation.cpp  combinatorics.cpp  crypto.cpp  exponentiation.cpp  extended_gcd.cpp  gcd.cpp  graph.cpp  graph.rs  hash.cpp  interpolation.cpp  lib.rs  modulo.cpp  modulo_operations.cpp  newton.cpp  primes.cpp  random.cpp  search.cpp  segment_tree.cpp  sort.cpp  table.cpp  trees.cpp  union_find.cpp
test/: CMakeLists.txt  google_test.cpp  simple_test.cpp
tests/: CMakeLists.txt  simple_test.cpp
